Fixed java version and other fixes
- Set java version to 17 instead of 21
- Changed functions that is in java 21 but not in java 17
- Added "g4mespeed" as dependecy in fabric.mod.json